A basic set of recipes that installs/configures the go agent and server